<resources>
    <string name="app_name">JetpackSAM</string>
    <string name="hint_phrase">Phrase...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Phrase not saved because it is empty.</string>
    <string name="title_activity_view_phrase">ViewPhraseActivity</string>
    <string name="action_settings">settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="medium_text">text</string>
    <string name="medium_spoken">spoken</string>
    <string name="cache">cache</string>
    <string name="stream">stream</string>
    <string name="memory_hint">Enter memory to save here</string>

    <!-- Preference Titles -->
    <string name="data_streams_header">Data Streams</string>
    <string name="server_header">Server</string>
    <string name="wearable_devices_header">Wearables</string>
    <string name="privacy">Privacy Policy</string>
    <string name="privacy_title">Privacy</string>

    <!-- Modes -->
    <string name="remind_mode">Remind Mode</string>
    <string name="remind_mode_summary">Set an interval at which to be reminded to offload your current thoughts.</string>
    <string name="remind_interval">Reminder Interval Time (seconds)</string>

    <!-- Data Stream Preferences -->
    <string name="record_audio">Record Audio</string>
    <string name="transcribe">Live Transcription</string>
    <string name="native_voicerec">On-Device Transcription (Beta)</string>
    <string name="native_voicerec_summary">Faster, but may fail or work inconsistently on some devices</string>

    <!-- Server Preferences -->
    <string name="sync_title">Paired Remote Server</string>
    <string name="server_address">Server Address</string>
    <string name="default_server_address">https://memoryexpansiontools.com</string>

    <!-- User -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_message">Welcome to Memory Expansion Tools. Please log in.</string>
    <string name="alreadylogin_message">You are already logged in. Log in again to change accounts.</string>
    <string name="signup_message">If you don\'t have an account, sign up at memoryexpansiontools.com.</string>

    <!-- Wearables Preferences -->
    <string name="bluetooth_headset">Bluetooth Headset</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
